# Akatz-Utils

./: .gitignore  README.md  pyproject.toml
launcher/: README.md  __init__.py  __main__.py  app.py  launcher.py  pyproject.toml
launcher/routes/: imgsizer.py  pdf2md.py  vid2gif.py
launcher/static/css/: style.css
launcher/static/js/: imgsizer.js  pdf2md.js  vid2gif.js
launcher/templates/: base.html  hub.html  imgsizer.html  pdf2md.html  vid2gif.html
tools/imgsizer/: README.md  __init__.py  imgsizer.py  pyproject.toml
tools/pdf2md/: README.md  __init__.py  __main__.py  pdf2md.py  pyproject.toml
tools/vid2gif/: __init__.py  __main__.py  pyproject.toml  vid2gif.py
