[project]
name = "akatz-utils-launcher"
version = "0.1.0"
description = "Web-based launcher hub for Akatz utility tools"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "flask>=3.0",
    "pdf2md",
    "vid2gif",
    "imgsizer",
]

[project.scripts]
akatz-utils = "launcher:main"

[tool.uv.sources]
pdf2md = { workspace = true }
vid2gif = { workspace = true }
imgsizer = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build]
dev-mode-dirs = [".."]

[tool.hatch.build.targets.wheel]
packages = ["."]
