[project]
name = "imgsizer"
version = "0.1.0"
description = "A simple GUI tool for resizing and compressing images"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pillow>=10.0.0",
]

[project.scripts]
imgsizer = "imgsizer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["."]