[project]
name = "pdf2md"
version = "0.1.0"
description = "A simple GUI tool for converting PDF files to Markdown"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pdfplumber>=0.11.4",
]

[project.scripts]
pdf2md = "pdf2md:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]
