[project]
name = "pdf2md"
version = "0.1.0"
description = "PDF to Markdown conversion utilities"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pdfplumber>=0.11.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build]
dev-mode-dirs = [".."]

[tool.hatch.build.targets.wheel]
packages = ["."]
