[project]
name = "vid2gif"
version = "0.1.0"
description = "Video to GIF conversion utilities"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "moviepy>=2.2.1",
    "pillow>=11.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build]
dev-mode-dirs = [".."]

[tool.hatch.build.targets.wheel]
packages = ["."]
